--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div class="container">
-      <h1>Webpack Course Dist</h1>
+      <h1>Webpack Course Dist1</h1>
+      <hr />
+      <div class="logo"></div>
+      <!-- <div>
+        <img src="./assets/webpack-logo.png" alt="" />
+      </div> -->
     </div>
   </body>
 </html>
